clapi_macros/test_suite/tests/ui/fail/invalid_option_value/invalid_option_description.rs
use clapi::macros::*;

#[command]
#[option(x, description=1)]
fn app(x: i64){}

fn main(){}