clapi_macros/test_suite/tests/ui/fail/invalid_option_value/invalid_option_description.stderr
error: custom attribute panicked
 --> $DIR/invalid_option_description.rs:3:1
  |
3 | #[command]
  | ^^^^^^^^^^
  |
  = help: message: option `description` is expected to be string literal
